force-app/core/main/default/objects/Integration_Transaction__c/Integration_Transaction__c.object-meta.xml
<CustomObject>
    <description>Persistent observability record for Salesforce to ServiceNow integration processing, retry tracing, and support operations using healthcare-safe logging.</description>
    <label>Integration Transaction</label>
    <nameField>
        <displayFormat>ITX-{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>