force-app/core/main/default/objects/Integration_Transaction__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <description>Normalized business unit snapshot used for cross-org reporting.</description>
    <label>Business Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>