force-app/core/main/default/objects/Integration_Transaction__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>