force-app/core/main/default/objects/Integration_Transaction__c/fields/ErrorCategory__c.field-meta.xml
<CustomField>
    <label>Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Configuration</fullName><default>false</default><label>Configuration</label></value>
            <value><fullName>Validation</fullName><default>false</default><label>Validation</label></value>
            <value><fullName>Transport</fullName><default>false</default><label>Transport</label></value>
            <value><fullName>Platform</fullName><default>false</default><label>Platform</label></value>
            <value><fullName>Security</fullName><default>false</default><label>Security</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>