force-app/core/main/default/objects/Integration_Transaction__c/fields/ErrorSummary__c.field-meta.xml
<CustomField>
    <label>Error Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>