force-app/core/main/default/objects/Integration_Transaction__c/fields/Failure_Class__c.field-meta.xml
<CustomField>
    <fullName>Failure_Class__c</fullName>
    <label>Failure Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>