force-app/core/main/default/objects/Integration_Transaction__c/fields/Lifecycle_State__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_State__c</fullName>
    <label>Lifecycle State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>