force-app/core/main/default/objects/Integration_Transaction__c/fields/Replay_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Replay_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Replay Eligible</label>
    <type>Checkbox</type>
</CustomField>