force-app/core/main/default/objects/Integration_Transaction__c/fields/Retry_History__c.field-meta.xml
<CustomField>
    <fullName>Retry_History__c</fullName>
    <label>Retry History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>