force-app/core/main/default/objects/Integration_Transaction__c/fields/Safe_Request_Summary__c.field-meta.xml
<CustomField>
    <description>Sanitized request summary that excludes PHI or other regulated data.</description>
    <label>Safe Request Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>