force-app/core/main/default/objects/Integration_Transaction__c/fields/SourceObjectApiName__c.field-meta.xml
<CustomField>
    <description>Normalized Salesforce source object API name for centralized reporting.</description>
    <label>Source Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>