force-app/core/main/default/objects/Integration_Transaction__c/fields/SourceRecordId__c.field-meta.xml
<CustomField>
    <label>Source Record Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>