force-app/core/main/default/objects/Integration_Transaction__c/fields/SourceRecordLabel__c.field-meta.xml
<CustomField>
    <description>Human-readable source record label captured for admin reporting across orgs.</description>
    <label>Source Record Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>