force-app/core/main/default/objects/Integration_Transaction__c/fields/Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Support_Status__c</fullName>
    <label>Support Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>