force-app/core/main/default/objects/Integration_Transaction__c/listViews/Failed_Transactions.listView-meta.xml
<ListView>
    <columns>Name</columns>
    <columns>Status__c</columns>
    <columns>SalesforceOrgCode__c</columns>
    <columns>RequestType__c</columns>
    <columns>ErrorCategory__c</columns>
    <columns>ErrorCode__c</columns>
    <columns>RetryCount__c</columns>
    <columns>StartedAt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Transactions</label>
</ListView>