force-app/core/main/default/objects/Integration_Transaction__c/listViews/In_Flight_Transactions.listView-meta.xml
<ListView>
    <columns>Name</columns>
    <columns>Status__c</columns>
    <columns>SalesforceOrgCode__c</columns>
    <columns>BusinessUnit__c</columns>
    <columns>SourceObjectApiName__c</columns>
    <columns>SourceRecordLabel__c</columns>
    <columns>Operation__c</columns>
    <columns>CorrelationId__c</columns>
    <columns>StartedAt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Succeeded</value>
    </filters>
    <label>In Flight Transactions</label>
</ListView>